--- a/components/esp_gdbstub/CMakeLists.txt
+++ b/components/esp_gdbstub/CMakeLists.txt
@@ -1,16 +1,15 @@
 idf_build_get_property(target IDF_TARGET)
 
-idf_component_register(SRCS "src/gdbstub.c" "src/packet.c"
+set(esp_gdbstub_srcs "src/gdbstub.c"
+                     "src/packet.c"
+                     "esp_common/gdbstub_common.c"
+                     "${target}/gdbstub_${target}.c"
+                     "xtensa/gdbstub-entry.S"
+                     "xtensa/gdbstub_xtensa.c")
+
+idf_component_register(SRCS "${esp_gdbstub_srcs}"
                        INCLUDE_DIRS "include"
-                       PRIV_INCLUDE_DIRS "private_include"
+                       PRIV_INCLUDE_DIRS "private_include" "${target}" "xtensa"
                        LDFRAGMENTS "linker.lf"
                        REQUIRES "freertos"
-                       PRIV_REQUIRES "soc" "esp_rom")
-
-if(CONFIG_IDF_TARGET_ARCH_XTENSA)
-    target_include_directories(${COMPONENT_LIB} PUBLIC "xtensa" "${target}")
-    target_sources(${COMPONENT_LIB} PRIVATE "xtensa/gdbstub_xtensa.c" "${target}/gdbstub_${target}.c")
-elseif(CONFIG_IDF_TARGET_ARCH_RISCV)
-    target_include_directories(${COMPONENT_LIB} PUBLIC "riscv" "${target}")
-    target_sources(${COMPONENT_LIB} PRIVATE "riscv/gdbstub_riscv.c" "${target}/gdbstub_${target}.c")
-endif()
+                       PRIV_REQUIRES "soc" "xtensa" "esp_rom")
