--- a/components/esp32s3/Kconfig
+++ b/components/esp32s3/Kconfig
@@ -169,8 +169,19 @@ menu "ESP32S3-Specific"
     menu "SPI RAM config"
         depends on ESP32S3_SPIRAM_SUPPORT
 
+        choice SPIRAM_MODE
+            prompt "Mode (QUAD/OCT) of SPI RAM chip in use"
+            default SPIRAM_MODE_QUAD
+
+            config SPIRAM_MODE_QUAD
+                bool "Quad Mode PSRAM"
+
+            config SPIRAM_MODE_OCT
+                bool "Octal Mode PSRAM"
+        endchoice
+
         choice SPIRAM_TYPE
-            prompt "Type of SPI RAM chip in use"
+            prompt "Type of SPIRAM chip in use"
             default SPIRAM_TYPE_AUTO
 
             config SPIRAM_TYPE_AUTO
@@ -178,12 +189,14 @@ menu "ESP32S3-Specific"
 
             config SPIRAM_TYPE_ESPPSRAM16
                 bool "ESP-PSRAM16 or APS1604"
+                depends on SPIRAM_MODE_QUAD
 
             config SPIRAM_TYPE_ESPPSRAM32
                 bool "ESP-PSRAM32 or IS25WP032"
+                depends on SPIRAM_MODE_QUAD
 
             config SPIRAM_TYPE_ESPPSRAM64
-                bool "ESP-PSRAM64 or LY68L6400"
+                bool "ESP-PSRAM64 , LY68L6400 or APS6408"
         endchoice
 
         config SPIRAM_SIZE
@@ -192,6 +205,8 @@ menu "ESP32S3-Specific"
             default 2097152 if SPIRAM_TYPE_ESPPSRAM16
             default 4194304 if SPIRAM_TYPE_ESPPSRAM32
             default 8388608 if SPIRAM_TYPE_ESPPSRAM64
+            default 16777216 if SPIRAM_TYPE_ESPPSRAM128
+            default 33554432 if SPIRAM_TYPE_ESPPSRAM256
             default 0
 
         menu "PSRAM Clock and CS IO for ESP32S3"
@@ -235,10 +250,6 @@ menu "ESP32S3-Specific"
                 bool "80MHz clock speed"
             config SPIRAM_SPEED_40M
                 bool "40Mhz clock speed"
-            config SPIRAM_SPEED_26M
-                bool "26Mhz clock speed"
-            config SPIRAM_SPEED_20M
-                bool "20Mhz clock speed"
         endchoice
 
         # insert non-chip-specific items here
