lwip: Add CONFIG_LWIP_ICMP and CONFIG_LWIP_ICMP6 to sperate the code

--- a/components/lwip/CMakeLists.txt
+++ b/components/lwip/CMakeLists.txt
@@ -8,9 +8,6 @@ set(include_dirs
 
 set(srcs
     "apps/dhcpserver/dhcpserver.c"
-    "apps/ping/esp_ping.c"
-    "apps/ping/ping.c"
-    "apps/ping/ping_sock.c"
     "apps/sntp/sntp.c"
     "lwip/src/api/api_lib.c"
     "lwip/src/api/api_msg.c"
@@ -139,6 +136,13 @@ endif()
 
 if(CONFIG_OPENTHREAD_ENABLED)
     list(APPEND srcs "port/esp32/netif/openthreadif.c")
+endif()
+
+if(CONFIG_LWIP_ICMP)
+    list(APPEND srcs
+        "apps/ping/esp_ping.c"
+        "apps/ping/ping.c"
+        "apps/ping/ping_sock.c")
 endif()
 
 idf_component_register(SRCS "${srcs}"
