openthread: update openthread submodule
Roll OpenThread submodule and rename OpenThread config macros and api
calls accordingly.

--- a/components/openthread/CMakeLists.txt
+++ b/components/openthread/CMakeLists.txt
@@ -10,11 +10,14 @@ if(CONFIG_OPENTHREAD_ENABLED)
         "openthread/src/lib/hdlc"
         "openthread/src/lib/spinel"
         "openthread/src/ncp"
+        "openthread/examples/platforms/"
         "private_include")
 
     set(src_dirs
+        "openthread/examples/apps/cli"
         "openthread/src/cli"
         "openthread/src/core/api"
+        "openthread/src/core/backbone_router"
         "openthread/src/core/coap"
         "openthread/src/core/common"
         "openthread/src/core/crypto"
@@ -30,7 +33,9 @@ if(CONFIG_OPENTHREAD_ENABLED)
         "openthread/src/lib/spinel"
         "port")
 
-    set(exclude_srcs "openthread/src/core/common/extension_example.cpp")
+    set(exclude_srcs
+        "openthread/examples/apps/cli/main.cpp"
+        "openthread/src/core/common/extension_example.cpp")
 
     if(CONFIG_OPENTHREAD_FTD)
         set(device_type "OPENTHREAD_FTD=1")
