--- a/components/tcp_transport/CMakeLists.txt
+++ b/components/tcp_transport/CMakeLists.txt
@@ -1,7 +1,14 @@
-idf_component_register(SRCS "transport.c"
-                            "transport_ssl.c"
-                            "transport_ws.c"
-                            "transport_utils.c"
+set(srcs
+    "transport.c"
+    "transport_ssl.c"
+    "transport_utils.c")
+
+if(CONFIG_WS_TRANSPORT)
+list(APPEND srcs
+    "transport_ws.c")
+endif()
+
+idf_component_register(SRCS "${srcs}"
                     INCLUDE_DIRS "include"
                     PRIV_INCLUDE_DIRS "private_include"
                     REQUIRES esp-tls)
