--- a/.gitlab/ci/target-test.yml
+++ b/.gitlab/ci/target-test.yml
@@ -121,6 +121,7 @@ example_test_001D:
 
 example_test_OTA:
   extends: .example_test_esp32_template
+  parallel: 2
   tags:
     - ESP32
     - Example_WIFI_OTA
