--- a/components/esp32s3/ld/esp32s3.project.ld.in
+++ b/components/esp32s3/ld/esp32s3.project.ld.in
@@ -293,7 +293,6 @@ SECTIONS
     _rodata_reserved_start = .;
   } > default_rodata_seg
 
-  /* When modifying the alignment, don't forget to update tls_section_alignment in pxPortInitialiseStack */
   .flash.appdesc : ALIGN(0x10)
   {
     _rodata_start = ABSOLUTE(.);
@@ -309,6 +308,8 @@ SECTIONS
 
   .flash.rodata : ALIGN(0x10)
   {
+    _flash_rodata_start = ABSOLUTE(.);
+
     mapping[flash_rodata]
 
     *(.irom1.text) /* catch stray ICACHE_RODATA_ATTR */
@@ -361,6 +362,8 @@ SECTIONS
     _rodata_reserved_end = ABSOLUTE(.);
     . = ALIGN(4);
   } > default_rodata_seg
+
+  _flash_rodata_align = ALIGNOF(.flash.rodata);
 
   /* Marks the end of IRAM code segment */
   .iram0.text_end (NOLOAD) :
