freertos: fix TLS run-time address calculation
Since dd849ffc, _rodata_start label has been moved to a different
linker output section from where the TLS templates (.tdata, .tbss)
are located. Since link-time addresses of thread-local variables are
calculated relative to the section start address, this resulted in
incorrect calculation of THREADPTR/$tp registers.

Fix by introducing new linker label, _flash_rodata_start, which points
to the .flash.rodata output section where TLS variables are located,
and use it when calculating THREADPTR/$tp.

Also remove the hardcoded rodata section alignment for Xtensa targets.
Alignment of rodata can be affected by the user application, which is
the issue dd849ffc was fixing. To accommodate any possible alignment,
save it in a linker label (_flash_rodata_align) and then use when
calculating THREADPTR. Note that this is not required on RISC-V, since
this target doesn't use TPOFF.

--- a/components/esp32/ld/esp32.project.ld.in
+++ b/components/esp32/ld/esp32.project.ld.in
@@ -249,7 +249,6 @@ SECTIONS
   ASSERT(((_bss_end - ORIGIN(dram0_0_seg)) <= LENGTH(dram0_0_seg)),
           "DRAM segment data does not fit.")
 
-  /* When modifying the alignment, update tls_section_alignment in pxPortInitialiseStack */
   .flash.appdesc : ALIGN(0x10)
   {
     _rodata_start = ABSOLUTE(.);
@@ -265,6 +264,8 @@ SECTIONS
 
   .flash.rodata : ALIGN(0x10)
   {
+    _flash_rodata_start = ABSOLUTE(.);
+
     mapping[flash_rodata]
 
     *(.irom1.text) /* catch stray ICACHE_RODATA_ATTR */
@@ -319,6 +320,8 @@ SECTIONS
     _thread_local_end = ABSOLUTE(.);
     . = ALIGN(4);
   } >default_rodata_seg
+
+  _flash_rodata_align = ALIGNOF(.flash.rodata);
 
   .flash.text :
   {
