--- a/components/esp32c3/ld/esp32c3.project.ld.in
+++ b/components/esp32c3/ld/esp32c3.project.ld.in
@@ -300,7 +300,6 @@ SECTIONS
     _rodata_reserved_start = .;
   } > default_rodata_seg
 
-  /* When modifying the alignment, don't forget to update tls_section_alignment in pxPortInitialiseStack */
   .flash.appdesc : ALIGN(0x10)
   {
     _rodata_start = ABSOLUTE(.);
@@ -316,6 +315,8 @@ SECTIONS
 
   .flash.rodata : ALIGN(0x10)
   {
+    _flash_rodata_start = ABSOLUTE(.);
+
     mapping[flash_rodata]
 
     *(.irom1.text) /* catch stray ICACHE_RODATA_ATTR */
