--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,10 @@
 	path = components/esptool_py/esptool
 	url = ../../espressif/esptool.git
 
+[submodule "components/bt/controller/lib_esp32"]
+	path = components/bt/controller/lib_esp32
+        url = ../../espressif/esp32-bt-lib.git
+
 [submodule "components/bootloader/subproject/components/micro-ecc/micro-ecc"]
 	path = components/bootloader/subproject/components/micro-ecc/micro-ecc
 	url = ../../kmackay/micro-ecc.git
@@ -90,3 +94,7 @@
 [submodule "components/openthread/openthread"]
 	path = components/openthread/openthread
 	url = ../../espressif/openthread.git
+
+[submodule "components/bt/controller/lib_esp32c3_family"]
+	path = components/bt/controller/lib_esp32c3_family
+	url = ../../espressif/esp32c3-bt-lib.git
