--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ future>=0.15.2
 cryptography>=2.1.4
 pyparsing>=2.0.3,<2.4.0
 pyelftools>=0.22
+idf-component-manager>=0.2.99-beta
 
 gdbgui==0.13.2.0
 # 0.13.2.1 supports Python 3.6+ only
