soc/hal: add tinyusb support esp32s3
add usb hal/soc, usb_ll files and esp32s3 target for usb
move usb_hal.h into soc common folder
soc/hal: fix soc and periph for usb
tinyusb: fix tinyusb io header
hal: usb_ll fix pull up/down config for esp32s3
soc/hal: fix peripheral addresses

--- a/components/hal/CMakeLists.txt
+++ b/components/hal/CMakeLists.txt
@@ -59,13 +59,13 @@ if(NOT BOOTLOADER_BUILD)
                     "spi_slave_hd_hal.c"
                     "systimer_hal.c"
                     "touch_sensor_hal.c"
+                    "usb_hal.c"
                     "esp32s2/adc_hal.c"
                     "esp32s2/brownout_hal.c"
                     "esp32s2/cp_dma_hal.c"
                     "esp32s2/touch_sensor_hal.c"
                     "esp32s2/dac_hal.c"
                     "esp32s2/interrupt_descriptor_table.c"
-                    "esp32s2/usb_hal.c"
                     "esp32s2/usbh_hal.c")
     endif()
 
@@ -78,6 +78,7 @@ if(NOT BOOTLOADER_BUILD)
             "spi_slave_hd_hal.c"
             "systimer_hal.c"
             "touch_sensor_hal.c"
+            "usb_hal.c"
             "esp32s3/brownout_hal.c"
             "esp32s3/interrupt_descriptor_table.c"
             "esp32s3/touch_sensor_hal.c")
