[log]: Normal log works on Linux now
* also removed strlcpy dependency from log
* added Kconfig option for linux target

Closes IDF-3245

--- a/Kconfig
+++ b/Kconfig
@@ -64,6 +64,10 @@ mainmenu "Espressif IoT Development Framework Configuration"
         select FREERTOS_UNICORE
         select IDF_TARGET_ARCH_RISCV
 
+    config IDF_TARGET_LINUX
+        bool
+        default "y" if IDF_TARGET="linux"
+
     config IDF_FIRMWARE_CHIP_ID
         hex
         default 0x0000 if IDF_TARGET_ESP32
