uart: support alloc driver object in SRAM
If CONFIG_UART_ISR_IN_IRAM is on, which means user hope the uart
interrupt can still be serviced even when cache is diabled (e.g.
writing to flash). In that case, the driver should make sure to
put the all related objects into SRAM, avoid putting them in the PSRAM.

Closes https://github.com/espressif/esp-idf/issues/7044
Closes https://github.com/espressif/esp-idf/pull/7355

--- a/components/driver/Kconfig
+++ b/components/driver/Kconfig
@@ -99,6 +99,7 @@ menu "Driver configurations"
         config UART_ISR_IN_IRAM
             bool "Place UART ISR function into IRAM"
             default n
+            select FREERTOS_SUPPORT_STATIC_ALLOCATION
             help
                 If this option is not selected, UART interrupt will be disabled for a long time and
                 may cause data lost when doing spi flash operation.
