build docs: enable building of S3 docs
 * Added suport for building esp32s3 docs
 * Fixed all related warnings
 * Activated building of S3 docs for build HTML fast CI job

--- a/.gitlab/ci/docs.yml
+++ b/.gitlab/ci/docs.yml
@@ -125,6 +125,13 @@ build_docs_html_fast:
   variables:
     DOC_BUILDERS: "html"
     DOCS_FAST_BUILD: "yes"
+  # matrix is redefined to include esp32s3 here
+  # that we can build for S3 MRs during bringup phase without
+  # anything being built and published from master branch
+  parallel:
+    matrix:
+      - DOCLANG: ["en", "zh_CN"]
+        DOCTGT: ["esp32", "esp32s2", "esp32s3", "esp32c3"]
 
 build_docs_pdf:
   extends:
