fpga: Disable BOD when running on FPGA

--- a/components/esp32/Kconfig
+++ b/components/esp32/Kconfig
@@ -532,6 +532,7 @@ menu "ESP32-specific"
 
     config ESP32_BROWNOUT_DET
         bool "Hardware brownout detect & reset"
+        depends on !IDF_ENV_FPGA
         default y
         help
             The ESP32 has a built-in brownout detector which can detect if the voltage is lower than
