--- a/components/esp32c3/Kconfig
+++ b/components/esp32c3/Kconfig
@@ -66,6 +66,7 @@ menu "ESP32C3-Specific"
 
     config ESP32C3_BROWNOUT_DET
         bool "Hardware brownout detect & reset"
+        depends on !IDF_ENV_FPGA
         default y
         help
             The ESP32-C3 has a built-in brownout detector which can detect if the voltage is lower than
