--- a/components/esp32s3/Kconfig
+++ b/components/esp32s3/Kconfig
@@ -331,6 +331,7 @@ menu "ESP32S3-Specific"
 
     config ESP32S3_BROWNOUT_DET
         bool "Hardware brownout detect & reset"
+        depends on !IDF_ENV_FPGA
         default y
         help
             The ESP32-S3 has a built-in brownout detector which can detect if the voltage is lower than
