regi2c: add a spinlock for accessing (reg)I2C devices
When not compiling bootloader, a spinlock will be used for reading or writing
I2C internal devices/registers.
When compiling for bootloader, no need to use any lock.

--- a/components/soc/CMakeLists.txt
+++ b/components/soc/CMakeLists.txt
@@ -5,11 +5,15 @@ if(EXISTS "${COMPONENT_PATH}/${SOC_NAME}")
 
     spaces2list(SOC_SRCS)
     add_prefix(COMPONENT_SRCS "${SOC_NAME}/" ${SOC_SRCS})
-    set(COMPONENT_ADD_INCLUDEDIRS ${SOC_NAME}/include)
+    set(COMPONENT_ADD_INCLUDEDIRS ${SOC_NAME}/include ${SOC_NAME}/)
 endif()
 
 list(APPEND COMPONENT_ADD_INCLUDEDIRS include)
 list(APPEND COMPONENT_SRCS "src/memory_layout_utils.c")
+
+if (NOT(BOOTLOADER_BUILD))
+    list(APPEND COMPONENT_SRCS "src/regi2c_ctrl.c")
+endif()
 
 set(COMPONENT_ADD_LDFRAGMENTS linker.lf)
 
