openthread: add ot tcp and udp socket example

--- a/examples/openthread/ot_cli/main/CMakeLists.txt
+++ b/examples/openthread/ot_cli/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "ot_esp_cli.c"
+idf_component_register(SRCS "esp_ot_udp_socket.c" "esp_ot_tcp_socket.c" "esp_ot_cli_extension.c" "esp_ot_cli.c"
                        INCLUDE_DIRS ".")
