--- a/.gitlab/ci/host-test.yml
+++ b/.gitlab/ci/host-test.yml
@@ -1,7 +1,9 @@
 .host_test_template:
   extends: .rules:test:host_test
   stage: host_test
-  image: $CI_DOCKER_REGISTRY/esp32-ci-env$BOT_DOCKER_IMAGE_TAG
+  image: $ESP_ENV_IMAGE
+  variables:
+    PYTHON_VER: 3.6.13
   tags:
     - host_test
   dependencies: []
@@ -11,7 +13,7 @@ test_nvs_on_host:
   extends: .host_test_template
   script:
     - cd components/nvs_flash/test_nvs_host
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh make test
+    - make test
 
 test_nvs_coverage:
   extends:
@@ -33,7 +35,7 @@ test_partition_table_on_host:
     - build
   script:
     - cd components/partition_table/test_gen_esp32part_host
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./gen_esp32part_tests.py
+    - ./gen_esp32part_tests.py
 
 test_wl_on_host:
   extends: .host_test_template
@@ -55,10 +57,10 @@ test_ldgen_on_host:
   extends: .host_test_template
   script:
     - cd tools/ldgen/test
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_fragments.py
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_generation.py
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_entity.py
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_output_commands.py
+    - ./test_fragments.py
+    - ./test_generation.py
+    - ./test_entity.py
+    - ./test_output_commands.py
   variables:
     LC_ALL: C.UTF-8
 
@@ -66,7 +68,7 @@ test_ldgen_on_host:
   extends:
     - .host_test_template
     - .rules:labels:fuzzer_test-weekend_test
-  image: $CI_DOCKER_REGISTRY/afl-fuzzer-test
+  image: $AFL_FUZZER_TEST_IMAGE
   artifacts:
     when: always
     paths:
@@ -111,7 +113,7 @@ test_spiffs_on_host:
     - cd components/spiffs/test_spiffs_host/
     - make test
     - cd ../test_spiffsgen
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_spiffsgen.py
+    - ./test_spiffsgen.py
 
 test_multi_heap_on_host:
   extends: .host_test_template
@@ -125,26 +127,26 @@ test_certificate_bundle_on_host:
     - build
   script:
     - cd components/mbedtls/esp_crt_bundle/test_gen_crt_bundle/
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_gen_crt_bundle.py
+    - ./test_gen_crt_bundle.py
 
 test_confserver:
   extends: .host_test_template
   script:
     - cd tools/kconfig_new/test/confserver
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_confserver.py
+    - ./test_confserver.py
 
 test_gen_kconfig_doc:
   extends: .host_test_template
   script:
     - cd tools/kconfig_new/test/gen_kconfig_doc/
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_target_visibility.py
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_kconfig_out.py
+    - ./test_target_visibility.py
+    - ./test_kconfig_out.py
 
 test_confgen:
   extends: .host_test_template
   script:
     - cd tools/kconfig_new/test/confgen/
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_confgen.py
+    - ./test_confgen.py
 
 test_idf_monitor:
   extends: .host_test_template
@@ -168,7 +170,7 @@ test_idf_size:
     expire_in: 1 week
   script:
     - cd ${IDF_PATH}/tools/test_idf_size
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test.sh
+    - ./test.sh
 
 test_idf_py:
   extends: .host_test_template
@@ -176,7 +178,7 @@ test_idf_py:
     LC_ALL: C.UTF-8
   script:
     - cd ${IDF_PATH}/tools/test_idf_py
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_idf_py.py
+    - ./test_idf_py.py
 
 test_idf_tools:
   extends: .host_test_template
@@ -189,7 +191,7 @@ test_idf_tools:
     # Remove Xtensa and ULP toolchains from the PATH, tests will expect a clean environment
     - export PATH=$(p=$(echo $PATH | tr ":" "\n" | grep -v "/root/.espressif/tools\|/opt/espressif" | tr "\n" ":"); echo ${p%:})
     - cd ${IDF_PATH}/tools/test_idf_tools
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_idf_tools.py
+    - ./test_idf_tools.py
     # Test for create virtualenv. It must be invoked from Python, not from virtualenv.
     - cd ${IDF_PATH}/tools
     - python3 ./idf_tools.py install-python-env
@@ -203,12 +205,10 @@ test_esp32_efuse_table_on_host:
     expire_in: 1 week
   script:
     - cd ${IDF_PATH}/components/efuse/
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh -p 2.7.15 ./efuse_table_gen.py ${IDF_PATH}/components/efuse/esp32/esp_efuse_table.csv
+    - ./efuse_table_gen.py ${IDF_PATH}/components/efuse/esp32/esp_efuse_table.csv
     - git diff --exit-code -- esp32/esp_efuse_table.c || { echo 'Differences found for esp32 target. Please run make efuse_common_table or idf.py efuse_common_table and commit the changes.'; exit 1; }
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh -p 3.4.8 ./efuse_table_gen.py ${IDF_PATH}/components/efuse/esp32/esp_efuse_table.csv
-    - git diff --exit-code -- esp32/esp_efuse_table.c || { echo 'Differences found between running under Python 2 and 3.'; exit 1; }
     - cd ${IDF_PATH}/components/efuse/test_efuse_host
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./efuse_tests.py
+    - ./efuse_tests.py
 
 test_esp32s2_efuse_table_on_host:
   extends: .host_test_template
@@ -219,12 +219,10 @@ test_esp32s2_efuse_table_on_host:
     expire_in: 1 week
   script:
     - cd ${IDF_PATH}/components/efuse/
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh -p 2.7.15 ./efuse_table_gen.py -t "esp32s2" ${IDF_PATH}/components/efuse/esp32s2/esp_efuse_table.csv
+    - ./efuse_table_gen.py -t "esp32s2" ${IDF_PATH}/components/efuse/esp32s2/esp_efuse_table.csv
     - git diff --exit-code -- esp32s2/esp_efuse_table.c || { echo 'Differences found for esp32s2 target. Please run make efuse_common_table or idf.py efuse_common_table and commit the changes.'; exit 1; }
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh -p 3.4.8 ./efuse_table_gen.py -t "esp32s2" ${IDF_PATH}/components/efuse/esp32s2/esp_efuse_table.csv
-    - git diff --exit-code -- esp32s2/esp_efuse_table.c || { echo 'Differences found between running under Python 2 and 3.'; exit 1; }
     - cd ${IDF_PATH}/components/efuse/test_efuse_host
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./efuse_tests.py
+    - ./efuse_tests.py
 
 test_esp32s3_efuse_table_on_host:
   extends: .host_test_template
@@ -235,12 +233,10 @@ test_esp32s3_efuse_table_on_host:
     expire_in: 1 week
   script:
     - cd ${IDF_PATH}/components/efuse/
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh -p 2.7.15 ./efuse_table_gen.py -t "esp32s3" ${IDF_PATH}/components/efuse/esp32s3/esp_efuse_table.csv
+    - ./efuse_table_gen.py -t "esp32s3" ${IDF_PATH}/components/efuse/esp32s3/esp_efuse_table.csv
     - git diff --exit-code -- esp32s3/esp_efuse_table.c || { echo 'Differences found for esp32s3 target. Please run make efuse_common_table or idf.py efuse_common_table and commit the changes.'; exit 1; }
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh -p 3.4.8 ./efuse_table_gen.py -t "esp32s3" ${IDF_PATH}/components/efuse/esp32s3/esp_efuse_table.csv
-    - git diff --exit-code -- esp32s3/esp_efuse_table.c || { echo 'Differences found between running under Python 2 and 3.'; exit 1; }
     - cd ${IDF_PATH}/components/efuse/test_efuse_host
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./efuse_tests.py
+    - ./efuse_tests.py
 
 test_esp32c3_efuse_table_on_host:
   extends: .host_test_template
@@ -251,12 +247,10 @@ test_esp32c3_efuse_table_on_host:
     expire_in: 1 week
   script:
     - cd ${IDF_PATH}/components/efuse/
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh -p 2.7.15 ./efuse_table_gen.py -t "esp32c3" ${IDF_PATH}/components/efuse/esp32c3/esp_efuse_table.csv
+    - ./efuse_table_gen.py -t "esp32c3" ${IDF_PATH}/components/efuse/esp32c3/esp_efuse_table.csv
     - git diff --exit-code -- esp32c3/esp_efuse_table.c || { echo 'Differences found for esp32c3 target. Please run make efuse_common_table or idf.py efuse_common_table and commit the changes.'; exit 1; }
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh -p 3.4.8 ./efuse_table_gen.py -t "esp32c3" ${IDF_PATH}/components/efuse/esp32c3/esp_efuse_table.csv
-    - git diff --exit-code -- esp32c3/esp_efuse_table.c || { echo 'Differences found between running under Python 2 and 3.'; exit 1; }
     - cd ${IDF_PATH}/components/efuse/test_efuse_host
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./efuse_tests.py
+    - ./efuse_tests.py
 
 test_espcoredump:
   extends: .host_test_template
@@ -268,7 +262,7 @@ test_espcoredump:
     expire_in: 1 week
   script:
     - cd components/espcoredump/test/
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_espcoredump.sh
+    - ./test_espcoredump.sh
 
 test_logtrace_proc:
   extends: .host_test_template
@@ -280,7 +274,7 @@ test_logtrace_proc:
     expire_in: 1 week
   script:
     - cd ${IDF_PATH}/tools/esp_app_trace/test/logtrace
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test.sh
+    - ./test.sh
 
 test_sysviewtrace_proc:
   extends: .host_test_template
@@ -292,7 +286,7 @@ test_sysviewtrace_proc:
     expire_in: 1 week
   script:
     - cd ${IDF_PATH}/tools/esp_app_trace/test/sysview
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test.sh
+    - ./test.sh
 
 test_mkdfu:
   extends: .host_test_template
@@ -300,17 +294,19 @@ test_mkdfu:
     LC_ALL: C.UTF-8
   script:
     - cd ${IDF_PATH}/tools/test_mkdfu
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_mkdfu.py
+    - ./test_mkdfu.py
 
 test_mkuf2:
   extends: .host_test_template
   script:
     - cd ${IDF_PATH}/tools/test_mkuf2
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ./test_mkuf2.py
+    - ./test_mkuf2.py
 
 test_docs:
   extends: .host_test_template
   image: $ESP_IDF_DOC_ENV_IMAGE
+  variables:
+    PYTHON_VER: 3.6.10
   artifacts:
     when: on_failure
     paths:
@@ -318,9 +314,9 @@ test_docs:
     expire_in: 1 week
   script:
     - cd ${IDF_PATH}/docs/test
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh -p 3.6.10 pip install -r ${IDF_PATH}/docs/requirements.txt
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh -p 3.6.10 ./test_docs.py
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh -p 3.6.10 ./test_sphinx_idf_extensions.py
+    - python -m pip install -r ${IDF_PATH}/docs/requirements.txt
+    - ./test_docs.py
+    - ./test_sphinx_idf_extensions.py
 
 test_autocomplete:
   extends: .host_test_template
@@ -331,7 +327,7 @@ test_autocomplete:
       - ${IDF_PATH}/*.out
     expire_in: 1 week
   script:
-    - ${IDF_PATH}/tools/ci/multirun_with_pyenv.sh ${IDF_PATH}/tools/ci/test_autocomplete.py
+    - ${IDF_PATH}/tools/ci/test_autocomplete.py
 
 test_detect_python:
   extends: .host_test_template
