Add esp_timer_is_active function for Nimble stack to use esp_timer instead of FreeRTOS timer

--- a/components/bt/host/nimble/Kconfig.in
+++ b/components/bt/host/nimble/Kconfig.in
@@ -500,3 +500,9 @@ config BT_NIMBLE_BLUFI_ENABLE
     default n
     help
         Set this option to enable blufi functionality.
+
+config BT_NIMBLE_USE_ESP_TIMER
+    bool "Enable Esp Timer for Nimble"
+    default y
+    help
+        Set this option to use Esp Timer which has higher priority timer instead of FreeRTOS timer
