lcd: simplify lcd example
Move the lcd example files out of the folder spi_master, and refactor
the codes with esp_lcd driver. Add image rotation function to the
example.

--- a/examples/peripherals/lcd/tjpgd/main/CMakeLists.txt
+++ b/examples/peripherals/lcd/tjpgd/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(srcs "pretty_effect.c"
-    "spi_master_example_main.c"
+    "lcd_tjpgd_example_main.c"
     )
 
 # Only ESP32 has enough memory to do jpeg decoding
