--- a/tools/ci/config/target-test.yml
+++ b/tools/ci/config/target-test.yml
@@ -24,6 +24,7 @@
   artifacts:
     when: always
     paths:
+      - "**/*.log"
       - $LOG_PATH
     expire_in: 1 week
     reports:
@@ -64,6 +65,7 @@
   artifacts:
     when: always
     paths:
+      - "**/*.log"
       - $LOG_PATH
     expire_in: 1 week
     reports:
@@ -130,6 +132,7 @@
     reports:
         junit: $LOG_PATH/*/XUNIT_RESULT.xml
     paths:
+      - "**/*.log"
       - $LOG_PATH
     expire_in: 1 week
   variables:
@@ -272,11 +275,6 @@ example_test_009:
   tags:
     - ESP32
     - test_jtag_arm
-  artifacts:
-      when: always
-      paths:
-        - $CI_PROJECT_DIR/examples/get-started/hello_world/*.log
-      expire_in: 1 week
   variables:
     SETUP_TOOLS: "1"
 
@@ -291,12 +289,6 @@ example_test_011:
   tags:
     - ESP32
     - UT_T2_RS485
-  artifacts:
-      when: always
-      expire_in: 1 week
-      paths:
-        - $CI_PROJECT_DIR/examples/protocols/modbus/serial/*.log
-        - $LOG_PATH
   variables:
     SETUP_TOOLS: "1"
 
