--- a/components/nvs_flash/CMakeLists.txt
+++ b/components/nvs_flash/CMakeLists.txt
@@ -15,6 +15,12 @@ set(srcs "src/nvs_api.cpp"
 
 set(public_req spi_flash)
 
+# Current linux-based builds don't have common components.
+# Add the necessary ones manually:
+if(${target} STREQUAL "linux")
+    list(APPEND public_req "esp_rom" "log")
+endif()
+
 set(include_dirs "include")
 
 idf_component_register(SRCS "${srcs}"
@@ -29,9 +35,7 @@ if(${target} STREQUAL "linux")
     endif()
     idf_component_get_property(spi_flash_dir spi_flash COMPONENT_DIR)
     target_include_directories(${COMPONENT_LIB} PUBLIC
-            "${CMAKE_CURRENT_SOURCE_DIR}/mock/int"
             "${spi_flash_dir}/sim/stubs/freertos/include")
-    target_sources(${COMPONENT_LIB} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/mock/int/crc.cpp")
     target_compile_options(${COMPONENT_LIB} PUBLIC "-DLINUX_TARGET")
 else()
     # TODO: this is a workaround until IDF-2085 is fixed
