--- a/.gitlab/ci/host-test.yml
+++ b/.gitlab/ci/host-test.yml
@@ -180,6 +180,11 @@ test_idf_py:
 
 test_idf_tools:
   extends: .host_test_template
+  artifacts:
+    when: on_failure
+    paths:
+      - tools/tools.new.json
+    expire_in: 1 week
   script:
     # Remove Xtensa and ULP toolchains from the PATH, tests will expect a clean environment
     - export PATH=$(p=$(echo $PATH | tr ":" "\n" | grep -v "/root/.espressif/tools\|/opt/espressif" | tr "\n" ":"); echo ${p%:})
